Bug 244332 - kword:msoffice2007:Symbol bulleting is not retained in kword
Summary: kword:msoffice2007:Symbol bulleting is not retained in kword
Status: VERIFIED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: docx (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries All
: NOR normal
Target Milestone: ---
Assignee: Matus Uzak
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-01 07:39 UTC by Lassi Nieminen
Modified: 2011-12-23 10:37 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
MS Word 2007 document to be open in Kword (12.72 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2010-06-01 07:39 UTC, Lassi Nieminen
Details
Screenshot of the document in MS Office 2007 (2.25 MB, image/bmp)
2010-06-01 07:41 UTC, Lassi Nieminen
Details
Screenshot of the document in Kword (97.96 KB, image/pjpeg)
2010-06-01 07:42 UTC, Lassi Nieminen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Faure 2010-07-12 17:56:32 UTC


---- Reported by lassi.ta.nieminen@nokia.com 2010-06-01 08:39:31 +0300 ----

Created an attachment
MS Word 2007 document to be open in Kword

SOFTWARE VERSION:
  Kubuntu 9.10
  Koffice (svn version 1132578)
  Test document (MS Word 2007): mw07_bullets_symbol.docx

STEPS LEADING TO THE PROBLEM:
  1. Open the attached document in MS Word 2007.
  2. Open the same document in Kword.
  3. Observe the bullets in the document.
  
EXPECTED OUTCOME:
  Kword should be able to disply the symbol bullets.

ACTUAL OUTCOME:
  kword is not displaying the symbol bullets.

FREQUENCY:
  Always



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-06-01 08:41:03 +0300 ----

Created an attachment
Screenshot of the document in MS Office 2007



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-06-01 08:42:04 +0300 ----

Created an attachment
Screenshot of the document in Kword



--- Bug imported by faure@kde.org 2010-07-12 17:56  ---

This bug was previously known as _bug_ 171644.

Imported an attachment (id=48847)
Imported an attachment (id=48848)
Imported an attachment (id=48849)
Comment 1 Lassi Nieminen 2011-08-25 14:22:56 UTC
Most likely fix:
Disable the wingdings/symbol checks from DocxXmlNumberingReader.cpp
..and then you need to make sure that those fonts are installed.
Comment 2 Matus Uzak 2011-08-25 15:06:38 UTC
There should be one single approach implemented in all input filters.

Approach_1: Check if the font is installed and replace the character with '-' (for example) in case it is NOT.  That way the bullet information might get altered.

Approach_2: Use the current bullet character.  The filter does not care if the appropriate font is installed.

I prefer Approach_2.
Comment 3 Matus Uzak 2011-09-09 16:09:34 UTC
Git commit d24772002443abcf528915b8c67278c67cd1ca27 by Matus Uzak.
Committed on 09/09/2011 at 18:06.
Pushed by uzak into branch 'master'.

libmsoooxml: Set font-name for the bullet character, use correct bullet character.

* Let the host application decide what to do in case Microsoft fonts are not installed.
* Provide the font-name information in text-properties of list-level-style-*.

BUG:244332

M  +15   -9    filters/libmsooxml/MsooXmlUtils.cpp

http://commits.kde.org/calligra/d24772002443abcf528915b8c67278c67cd1ca27
Comment 4 keerthi 2011-12-23 10:37:02 UTC
Verified in revision efd72bd27341ffe9a49d4e30352f9468bb49d99d.