libmsoooxml: Set font-name for the bullet character, use correct bullet character.

* Let the host application decide what to do in case Microsoft fonts are not installed.
* Provide the font-name information in text-properties of list-level-style-*.

BUG:244332