filters/libmsooxml/MsooXmlUtils.cpp
@@ -1499,18 +1499,21 @@ QString Utils::ParagraphBulletProperties::convertToListProperties() const
     }
     else {
         returnValue = QString("<text:list-level-style-bullet text:level=\"%1\" ").arg(m_level);
-        if ((m_bulletFont.startsWith("Wingdings") || m_bulletFont.startsWith("Symbol")) && m_bulletChar != "") {
-            // In case of wingdings we replace with 'best guess'
-            returnValue += QString("text:bullet-char=\"%1\" ").arg("-");
+
+        //NOTE: Let the host application decide what to do in case Microsoft
+        //fonts are not installed, don't alter the information.
+//         if ((m_bulletFont.startsWith("Wingdings") || m_bulletFont.startsWith("Symbol")) && m_bulletChar != "") {
+//             // In case of wingdings we replace with 'best guess'
+//             returnValue += QString("text:bullet-char=\"%1\" ").arg("-");
+//         }
+//         else {
+        if (m_bulletChar == UNUSED) {
+            returnValue += QString("text:bullet-char=\"\" ");
         }
         else {
-            if (m_bulletChar == UNUSED) {
-                returnValue += QString("text:bullet-char=\"\" ");
-            }
-            else {
-                returnValue += QString("text:bullet-char=\"%1\" ").arg(m_bulletChar);
-            }
+            returnValue += QString("text:bullet-char=\"%1\" ").arg(m_bulletChar);
         }
+//         }
         ending = "</text:list-level-style-bullet>";
     }
     returnValue += ">";
@@ -1550,6 +1553,9 @@ QString Utils::ParagraphBulletProperties::convertToListProperties() const
     }
     if (m_type != ParagraphBulletProperties::PictureType) {
         returnValue += QString("fo:font-size=\"%1%\" ").arg(m_bulletRelativeSize);
+    }
+    if (m_bulletFont != "UNUSED") {
+        returnValue += QString("style:font-name=\"%1\" ").arg(m_bulletFont);
     }
 
     returnValue += "/>";
